Fix overflow caused by header link width

--- a/assets/styles/tablet.css
+++ b/assets/styles/tablet.css
@@ -18,7 +18,7 @@ header{
     height: 20px;
     font-size: var(--tablet-button-small);
     margin-left: 25px;
-    margin-right: 40px;
+    margin-right: 50px;
 }
 
 .header__contact-button a{
